Fix: first-visible-unpinned-tab margin

--- a/css/tabbar.css
+++ b/css/tabbar.css
@@ -32,6 +32,10 @@
     display: none !important;
 }
 
+#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs]) > #tabbrowser-arrowscrollbox > .tabbrowser-tab[first-visible-unpinned-tab] {
+    margin-inline-start: 0 !important;
+}
+
 /* Fix tab background height */
 .tab-background {
     margin-block: 0 !important;
